style.css
/* Root Variables Declaration */
:root {
  --base: #222831;
  --crust: #393e46;
  --text: #eeeeee;
  --sub-text: #00adb5;
  --button-bg: #2f7f85;
  --heading: "Inria Serif", serif;
  --sub-heading: "Inter", sans-serif;
  --paragraph: "Bricolage Grotesque", sans-serif;
  --navbar-height: 5rem;
}

* {
  margin: 0;
  padding: 0;
  font-family: var(--paragraph);
  font-size: 1rem;
}

html {
  scroll-behavior: smooth;
  scroll-padding-top: calc(var(--navbar-height) + 1rem);
}

body {
  background-color: var(--base);
  color: var(--text);
}

#toggle-menu {
  display: none;
}

.logo {
  position: fixed;
  top: 1%;
  left: 1%;
  z-index: 100;
  padding: 1rem;
  height: 3rem;
}

.hamburger {
  display: none;
  position: fixed;
  top: 1%;
  right: 1%;
  z-index: 100;
  padding: 1rem;
  user-select: none;
  cursor: pointer;
  font-size: 1.5rem;
  color: var(--sub-text);
  /* background-color: var(--base); */
}

.backdrop {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 80;
  width: 100dvw;
  height: 100dvh;
  background-color: transparent;
  cursor: default;
}

.center-content {
  display: flex;
  justify-content: center;
  align-items: center;
}

.nav-container {
  /* position: fixed;
  top: 0;
  left: 0; */
  z-index: 90;
  width: 100dvw;
  height: var(--navbar-height);
  background-color: var(--base);
}

.nav-links {
  position: fixed;
  top: 0;
  right: 0;
  display: flex;
  justify-content: flex-end;
  align-items: flex-start;
  gap: 2rem;
  padding: 2rem 3rem;
  width: 100dvw;
}

li {
  list-style: none;
}

.nav-links a {
  text-decoration: none;
  color: var(--sub-text);
}

h1,
h2,
h3 {
  font-family: var(--heading);
  display: block;
  margin: 2rem 0;
}
.home-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 0.25rem;
  /* margin: 5rem 0; */
  padding: 0 2rem;
  height: calc(100dvh - var(--navbar-height));
  text-align: center;
}

.ozen {
  font-family: var(--heading);
  color: var(--sub-text);
  font-weight: 900;
}

h1,
.ozen {
  font-size: 5rem;
}

.home-container h2 {
  font-family: var(--sub-heading);
  font-size: 3rem;
  font-weight: 600;
}

.hero-btn {
  display: flex;
  justify-content: center;
  gap: 3rem;
  width: 60dvw;
  margin: 2rem;
}

.hero-btn > a {
  flex: 1;
  max-width: 250px;
  background-color: var(--button-bg);
  text-decoration: none;
  font-style: var(--sub-heading);
  font-size: 1.35rem;
  color: var(--text);
  padding: 1rem 3rem;
  border: none;
  border-radius: 1rem;
  cursor: pointer;
  transition:
    background-color 0.3s ease,
    color 0.3s ease;
}

.hero-btn > a:hover {
  background-color: color-mix(in srgb, var(--button-bg), var(--crust) 20%);
  color: color-mix(in srgb, var(--text), var(--crust) 20%);
}

.about-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  width: 100dvw;
  height: 100dhv;
  text-align: justify;
}

h2 {
  font-size: 3.5rem;
  font-weight: 800;
  color: var(--sub-text);
}

h3 {
  font-size: 1.5rem;
  font-weight: 700;
  color: var(--sub-text);
}

.col-2-layout {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(1, 1fr);
  gap: 2rem;
  width: 90dvw;
}

.col-2-layout p {
  font-size: 1.2rem;
}

.about-img {
  height: 8rem;
}

footer {
  margin-top: 4rem;
  padding: 1.5rem;
  background-color: var(--crust);
}

footer hr {
  border: none;
  border-top: 1px solid var(--sub-text);
  margin-bottom: 1rem;
}

.footer-content {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
  align-content: space-around;
  gap: 1rem;
}

.footer-content p {
  font-size: 0.9rem;
  color: var(--sub-text);
}

/* For sizes tablet and above */
@media (min-width: 769px) {
  .about-container .center-content {
    order: -1;
  }
}

/* Tablet Size and Below */
@media (max-width: 768px) {
  html {
    font-size: 90%;
  }

  .col-2-layout {
    grid-template: 1fr / 1fr 2fr;
  }

  .footer-content {
    justify-content: space-evenly;
  }
}

/* Phone Size and Below */
@media (max-width: 576px) {
  html {
    font-size: 85%;
  }

  .hamburger {
    display: block;
  }

  .nav-links {
    position: fixed;
    top: 0;
    right: 0;
    z-index: 95;
    padding-top: 5rem;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    background-color: var(--crust);
    height: 100dvh;
    width: 50dvw;
    transform: translateX(100%);
    transition: transform 0.3s ease-in-out;
  }

  #toggle-menu:checked ~ .nav-links {
    transform: translateX(0);
  }

  #toggle-menu:checked ~ .backdrop {
    display: block;
  }

  .hero-btn {
    flex-direction: column;
  }

  .col-2-layout {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    justify-content: center;
    align-items: center;
    width: 80dvw;
  }

  .footer-content {
    flex-direction: column;
  }
}

